# qp_solve_tutorial

./: CMakeLists.txt  README.md
BalanceQP/: CMakeLists.txt
BalanceQP/include/: balance_qp_solver.h
BalanceQP/src/: balance_qp_solver.cpp  check.cpp
ConvexMPC/: CMakeLists.txt
ConvexMPC/include/: ConvexMpcSolver.h
ConvexMPC/src/: ConvexMpcSolver.cpp  check.cpp
include/: balance_qp_solver.h
src/: QP_solve.cpp  balance_qp_solver.cpp
